--- a/ScheduleMaker/war/ScheduleMaker.css
+++ b/ScheduleMaker/war/ScheduleMaker.css
@@ -371,6 +371,11 @@ a:visited {
         background:red;
 }
 
+.test-header{
+	background:Silver;
+	border-bottom: 1px solid #000000
+}
+
 .hour-label {
 		width:100%;
         height: 100%;
