--- a/ScheduleMaker/war/ScheduleMaker.css
+++ b/ScheduleMaker/war/ScheduleMaker.css
@@ -332,7 +332,6 @@ a:visited {
 .scroll-area {
         height: 500px;
         overflow: scroll;
-        overflow-x: hidden;
 }
 
 .day-cell-container {
@@ -358,21 +357,23 @@ a:visited {
 .teaching-cell {
         border-style:solid;border-width:1px;
         position: absolute;
-        font-size: 11px;
+        font-size: 10px;
         font-family: arial;
         /*border: 1px solid #000;*/
         overflow: hidden;
-        /*filter: alpha(opacity = 50);
-        opacity: .5;
-    -moz-opacity: .5;*/
+        filter: alpha(opacity = 80);
+        opacity: .8;
+    	-moz-opacity: .8;
         -webkit-border-radius: 6px;
         -moz-border-radius: 6px;
         border-radius: 6px;
         background:red;
 }
 
-.test-header{
+.teaching-cell-header{
 	background:Silver;
+	font-size: 10px;
+    font-family: arial;
 	border-bottom: 1px solid #000000
 }
 
